--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+    font-family: "google-sans";
+    src: url("../public/fonts/google-sans.ttf");
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 8px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    background: #E7E1D8;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: #333333;
+    border: 1px solid #2B1F46;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #333333;
+    border: 1px solid #333333;
 }
